@@ -1,11 +1,11 @@
 .\"     Title: pam_succeed_if
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
-.\"      Date: 06/02/2006
+.\"      Date: 06/17/2006
 .\"    Manual: Linux\-PAM
 .\"    Source: Linux\-PAM
 .\"
-.TH "PAM_SUCCEED_IF" "8" "06/02/2006" "Linux\-PAM" "Linux\-PAM"
+.TH "PAM_SUCCEED_IF" "8" "06/17/2006" "Linux\-PAM" "Linux\-PAM"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -103,22 +103,20 @@ To emulate the behaviour of
 .sp
 .RS 3n
 .nf
-    auth required pam_succeed_if.so quiet user ingroup wheel
-      
+auth required pam_succeed_if.so quiet user ingroup wheel
+    
 .fi
 .RE
-.sp
 .PP
 Given that the type matches, only loads the othermodule rule if the UID is over 500. Adjust the number after default to skip several rules.
 .sp
 .RS 3n
 .nf
-    type [default=1 success=ignore] pam_succeed_if.so quiet uid > 500
-    type required othermodule.so arguments...
-      
+type [default=1 success=ignore] pam_succeed_if.so quiet uid > 500
+type required othermodule.so arguments...
+    
 .fi
 .RE
-.sp
 .SH "SEE ALSO"
 .PP
 
